# BrainForge

./: .gitignore  Cargo.toml  README.md  README.pt-BR.md  bf.ps1  brainforge.toml.example  install.ps1
.github/workflows/: ci.yml  pages.yml  release.yml
brainforge/: HOST-SETUP.md  README.md  sync.ps1
brainforge/adapters/: AGENTS.md
brainforge/adapters/antigravity/rules/: cavecrew.md
brainforge/adapters/antigravity/workflows/: brainforge-doctor.md  brainforge.md  compress-context.md  install-skill.md
brainforge/adapters/copilot/: copilot-instructions.md
brainforge/adapters/cursor/hooks.example/: hooks.json  session-start.ps1
brainforge/adapters/cursor/rules/: cavecrew-default.mdc
brainforge/core/: BRAINFORGE.md  caveman.md  cavemem.md  installed-skills.json  skills-catalog.json
brainforge/core/commands/: brainforge-doctor.md  brainforge.md  compress-context.md  install-skill.md
brainforge/core/docs/: CURSOR-HOOKS.md  MCP-SETUP.md  MEMORY-FORMAT.md  ROADMAP-CHECKLIST.md  RUST-PHASES.md  SKILL-STANDARDS.md
brainforge/core/skills-optional/: DESCRIPTION.md
brainforge/core/skills-optional/writing-plans/: SKILL.md
brainforge/core/skills/architect/: SKILL.md
brainforge/core/skills/brainforge-doctor/: SKILL.md
brainforge/core/skills/bug-hunter/: SKILL.md
brainforge/core/skills/cavecrew/: SKILL.md
brainforge/core/skills/caveman/: SKILL.md
brainforge/memory/: .context.md  .context.md.example  .user.md
brainforge/tools/rtk/: README.md  install-rtk-local.ps1
crates/brainforge-cli/: Cargo.toml  build.rs
crates/brainforge-cli/src/: main.rs  ui.rs
crates/brainforge-core/: Cargo.toml
crates/brainforge-core/src/: adapter.rs  config.rs  copy_util.rs  doctor.rs  embedded.rs  init.rs  install.rs  kit.rs  lib.rs  memory.rs  proxy.rs  recall.rs  security.rs  skill.rs  sync.rs  sync_mode.rs
crates/brainforge-mcp/: Cargo.toml
crates/brainforge-mcp/src/: lib.rs  server.rs
teste/: .gitignore  AGENTS.md  rodar-simulacao.ps1  simular-contacerta.ps1  simular-massivo.ps1  simular-triplo-ide.ps1
teste/simulador/: app.js  index.html  styles.css
(+11 files in other folders)
