[package]
name = "brainforge-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BrainForge Model Context Protocol (MCP) stdio server"

[dependencies]
anyhow = "1"
brainforge-core = { path = "../brainforge-core" }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"
